package com.example.grpc;

message Coordinate {
  required int32 x = 1;
  required int32 y = 2;
}

message IntroductionMessage {
  required string id = 1;
  required string address = 2;
  required int32 port = 3;
  required Coordinate coordinate = 4;
  required bool isNextNode = 5;
}

message ElectionMessage {
  required string type = 1;
  required string playerId = 2;
  required double distanceFromBase = 3;
}

message AckMessage {
  required string ack = 1;
}

message CoordinateResponse {
  required Coordinate coordinate = 1;
}

service GameService {
  rpc introduction(IntroductionMessage) returns (CoordinateResponse);
  rpc election(stream ElectionMessage) returns (stream AckMessage);
}